# CTC-41

Analisador Lexico/: CMakeLists.txt  LabLexgenZipProf
Analisador Lexico/alunoout/: branch_test_code.diff  function_call_test_code.out  invalid_ch.out  missing_semicolon.out
Analisador Lexico/output/: branch_test_code.out  missing_comma.out
Analisador Lexico/scripts/: runlex
Analisador Lexico/src/: cminus  cminus.l  globals.h  lex.yy.c  util.c
AnalisadorLexico/: LabLexgenZipProf~
AnalisadorLexico/TinyFlex/: readme.txt
AnalisadorLexico/alunoout/: array_access_test_code.out  assign_test_code.out
AnalisadorLexico/example/: sort.cm
AnalisadorLexico/output/: invalid_id.out  mdc.out  missing_key.out  missing_parentheses.out  sort.out
AnalisadorLexico/src/: cminus.l  (+4 more)
AnalisadorSintatico/: CMakeLists.txt  readme
AnalisadorSintatico/TinyFlex/: util.c
AnalisadorSintatico/TinyGeracaoCodigo/: analyze.c  globals.h  parser.h  readme.txt  scan.h  symtab.h  teste.tny  tiny.l
AnalisadorSintatico/alunodetail/: array_access_test_code_gen.diff  array_access_test_code_syn.txt  assign_test_code_gen.diff  assign_test_code_lex.txt  assign_test_code_syn.txt  branch_test_code_gen.diff  branch_test_code_syn.txt  function_call_test_code_gen.diff  function_call_test_code_lex.txt  invalid_ch_err.diff  invalid_id_err.diff  mdc_gen.diff  missing_comma_err.diff  missing_key_err.diff  missing_key_lex.txt  missing_parentheses_err.diff  missing_semicolon_err.diff  ser1_variable_not_declared_err.diff  ser1_variable_not_declared_tab.txt  ser2_invalid_void_assignment_err.diff  ser3_invalid_decl_void_variable_err.diff  ser3_invalid_decl_void_variable_tab.txt  ser4_variable_already_declared_err.diff  ser5_function_not_declared_err.diff  ser5_function_not_declared_syn.txt  ser5_function_not_declared_tab.txt  ser6_main_undefined_err.diff  ser7_variable_name_used_for_function_err.diff  ser7_variable_name_used_for_function_lex.txt  ser7_variable_name_used_for_function_tab.txt  sort_badchar_err.diff  sort_badchar_lex.txt  sort_badchar_syn.txt  sort_gen.diff
AnalisadorSintatico/alunoout/: array_access_test_code.diff  array_access_test_code.out  assign_test_code.diff  assign_test_code.out  branch_test_code.diff  branch_test_code.out  function_call_test_code.diff  function_call_test_code.out  invalid_ch.out  invalid_id.diff  invalid_id.out  mdc.diff  mdc.out  missing_comma.diff  missing_comma.out  missing_key.diff  missing_key.out  missing_parentheses.diff  missing_parentheses.out  missing_semicolon.diff  missing_semicolon.out  ser1_variable_not_declared.diff  ser1_variable_not_declared.out  ser2_invalid_void_assignment.diff  ser2_invalid_void_assignment.out  ser3_invalid_decl_void_variable.diff  ser3_invalid_decl_void_variable.out  ser4_variable_already_declared.diff  ser4_variable_already_declared.out  ser5_function_not_declared.diff  ser5_function_not_declared.out  ser6_main_undefined.diff  ser6_main_undefined.out  ser7_variable_name_used_for_function.diff  ser7_variable_name_used_for_function.out  sort.diff  sort.out  sort_badchar.diff  sort_badchar.out
AnalisadorSintatico/detail/: array_access_test_code_gen.txt  array_access_test_code_tab.txt  assign_test_code_gen.txt  branch_test_code_tab.txt  function_call_test_code_gen.txt  function_call_test_code_tab.txt  mdc_tab.txt  missing_key_gen.txt:Zone.Identifier  ser1_variable_not_declared_syn.txt  ser2_invalid_void_assignment_syn.txt  ser2_invalid_void_assignment_tab.txt  ser3_invalid_decl_void_variable_lex.txt  ser3_invalid_decl_void_variable_syn.txt  ser4_variable_already_declared_lex.txt  ser4_variable_already_declared_syn.txt  ser6_main_undefined_err.txt  ser6_main_undefined_tab.txt  ser7_variable_name_used_for_function_syn.txt  sort_gen.txt
AnalisadorSintatico/output/: array_access_test_code.out  function_call_test_code.out  ser3_invalid_decl_void_variable.out  ser4_variable_already_declared.out  ser6_main_undefined.out
AnalisadorSintatico/scripts/: rundetaildiff  runlex
AnalisadorSintatico/src/: analyze.c  cgen.c  cminus  cminus.l  cminus.y  globals.h  lex.yy.c  main.c  parser.c  parser.h  symtab.c  symtab.h  teste.cm  util.c  util.h
AnalisadorSintatico2/: LabGengenZipProf  LabGengenZipProf~
(+53 files in other folders)
